<resources>
    <string name="app_name">Bookstore</string>

    <!-- Title text for the empty view, which describes the empty bookstore image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit empty here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product to the inventory [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a New Product</string>
    <string name="hint_price">Price</string>
    <string name="category_quantity">Quantity in Stock</string>
    <string name="category_supplier">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone Number</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="category_product_name">Product Details</string>
    <string name="hint_product_name">Product Name</string>
    <string name="category_supplier_phone">Phone</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="button_order_now">Order</string>
    <string name="editor_update_product_successful">Product Updated</string>
    <string name="editor_update_product_failed">Product failed to update.</string>
    <string name="editor_delete_product_failed">Product not deleted</string>
    <string name="editor_delete_product_successful">Product deleted from inventory</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete all Products</string>
    <string name="button_product_sold">Make Sale</string>
    <string name="price_unknown">Unknown price</string>
    <string name="initial_quantity_value">0</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="max_product_toast">Exceeds maximum product quantity</string>
    <string name="min_product_toast">Cannot stock a negative number of items</string>
    <string name="toast_pls_complete">Some required fields are blank</string>
    <string name="button_delete">Delete</string>
    <string name="toast_not_in_stock">This item is not in stock</string>
</resources>
